# platform.core.appfw.libeventsystem

./: AUTHORS  CMakeLists.txt  eventsystem.pc.in
include/: eventsystem.h  eventsystem_internal.h
packaging/: eventsystem.spec
src/: eventsystem.c
